[gd_scene load_steps=19 format=3 uid="uid://1s3qqbc0ubl3"]

[ext_resource type="Script" uid="uid://du1lvpsqxeva4" path="res://demo/subscenes/wheel_as_play_area_demo.gd" id="1_d4i3w"]
[ext_resource type="PackedScene" uid="uid://c3jlb4w5qfd00" path="res://component_wheel.tscn" id="2_vh4au"]
[ext_resource type="Script" uid="uid://d2y354i1gu1s8" path="res://wheel_logic/wheel_input/follow_node_wheel_input.gd" id="3_44mgm"]
[ext_resource type="Texture2D" uid="uid://csvma1cn8nmie" path="res://demo/assets/player.png" id="5_ho7tv"]
[ext_resource type="Script" uid="uid://deeil52rv46pt" path="res://demo/subscenes/demo_platformer.gd" id="5_uoxp5"]

[sub_resource type="Resource" id="Resource_lk5go"]
script = ExtResource("3_44mgm")
choose_action = &"ui_accept"
input_enabled = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hpqmw"]
height = 26.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6ojfj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1sflh"]
size = Vector2(200, 20)

[sub_resource type="Gradient" id="Gradient_k38an"]
colors = PackedColorArray(0.597176, 0.597176, 0.597176, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ai6mr"]
gradient = SubResource("Gradient_k38an")
width = 200
height = 20
fill_to = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2ua6"]
size = Vector2(50, 20)

[sub_resource type="Gradient" id="Gradient_pc0v6"]
colors = PackedColorArray(0.597176, 0.597176, 0.597176, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nwye7"]
gradient = SubResource("Gradient_pc0v6")
width = 50
height = 20
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_tbo00"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.510417, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_clq8j"]
gradient = SubResource("Gradient_tbo00")
width = 50
height = 50
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.75, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_hj3n0"]
font_size = 144
font_color = Color(0.57, 1, 0.613, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_kvhn4"]
font_size = 144
font_color = Color(1, 0.57, 0.57, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(10, 10)

[node name="WheelAsPlayArea" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d4i3w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ComponentWheel" parent="VBoxContainer" instance=ExtResource("2_vh4au")]
unique_name_in_owner = true
custom_minimum_size = Vector2(520, 520)
layout_mode = 2
input_handler = SubResource("Resource_lk5go")
radius = 250.0

[node name="Stage" type="StaticBody2D" parent="VBoxContainer"]
position = Vector2(275, 260)

[node name="Player" type="CharacterBody2D" parent="VBoxContainer/Stage"]
unique_name_in_owner = true
position = Vector2(2, 124)
script = ExtResource("5_uoxp5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Stage/Player"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_hpqmw")

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/Stage/Player"]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("5_ho7tv")

[node name="DeathPlane" type="Area2D" parent="VBoxContainer/Stage"]
unique_name_in_owner = true
position = Vector2(0, -58)

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/Stage/DeathPlane"]
position = Vector2(0, 316)
shape = SubResource("WorldBoundaryShape2D_6ojfj")

[node name="BPlat" type="CollisionShape2D" parent="VBoxContainer/Stage"]
position = Vector2(0, 150)
shape = SubResource("RectangleShape2D_1sflh")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Stage/BPlat"]
custom_minimum_size = Vector2(200, 20)
offset_left = -100.0
offset_top = -10.0
offset_right = 100.0
offset_bottom = 10.0
texture = SubResource("GradientTexture2D_ai6mr")

[node name="TPlat" type="CollisionShape2D" parent="VBoxContainer/Stage"]
position = Vector2(0, -150)
shape = SubResource("RectangleShape2D_1sflh")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Stage/TPlat"]
custom_minimum_size = Vector2(200, 20)
offset_left = -100.0
offset_top = -10.0
offset_right = 100.0
offset_bottom = 10.0
texture = SubResource("GradientTexture2D_ai6mr")

[node name="RPlat" type="CollisionShape2D" parent="VBoxContainer/Stage"]
position = Vector2(300, 0)
shape = SubResource("RectangleShape2D_1sflh")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Stage/RPlat"]
custom_minimum_size = Vector2(200, 20)
offset_left = -100.0
offset_top = -10.0
offset_right = 100.0
offset_bottom = 10.0
texture = SubResource("GradientTexture2D_ai6mr")

[node name="LPlat" type="CollisionShape2D" parent="VBoxContainer/Stage"]
position = Vector2(-300, 0)
shape = SubResource("RectangleShape2D_1sflh")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Stage/LPlat"]
custom_minimum_size = Vector2(200, 20)
offset_left = -100.0
offset_top = -10.0
offset_right = 100.0
offset_bottom = 10.0
texture = SubResource("GradientTexture2D_ai6mr")

[node name="LBPlat" type="CollisionShape2D" parent="VBoxContainer/Stage"]
position = Vector2(-150, 75)
shape = SubResource("RectangleShape2D_d2ua6")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Stage/LBPlat"]
custom_minimum_size = Vector2(50, 20)
offset_left = -25.0
offset_top = -10.0
offset_right = 25.0
offset_bottom = 10.0
texture = SubResource("GradientTexture2D_nwye7")

[node name="RBPlat" type="CollisionShape2D" parent="VBoxContainer/Stage"]
position = Vector2(150, 75)
shape = SubResource("RectangleShape2D_d2ua6")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Stage/RBPlat"]
custom_minimum_size = Vector2(50, 20)
offset_left = -25.0
offset_top = -10.0
offset_right = 25.0
offset_bottom = 10.0
texture = SubResource("GradientTexture2D_nwye7")

[node name="LTPlat" type="CollisionShape2D" parent="VBoxContainer/Stage"]
position = Vector2(-150, -75)
shape = SubResource("RectangleShape2D_d2ua6")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Stage/LTPlat"]
custom_minimum_size = Vector2(50, 20)
offset_left = -25.0
offset_top = -10.0
offset_right = 25.0
offset_bottom = 10.0
texture = SubResource("GradientTexture2D_nwye7")

[node name="RTPlat" type="CollisionShape2D" parent="VBoxContainer/Stage"]
position = Vector2(150, -75)
shape = SubResource("RectangleShape2D_d2ua6")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Stage/RTPlat"]
custom_minimum_size = Vector2(50, 20)
offset_left = -25.0
offset_top = -10.0
offset_right = 25.0
offset_bottom = 10.0
texture = SubResource("GradientTexture2D_nwye7")

[node name="ScoreBar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(550, 50)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="GoodBar" type="ColorRect" parent="VBoxContainer/ScoreBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 10
color = Color(0, 0.67, 0.0893334, 1)

[node name="IndicatorRect" type="TextureRect" parent="VBoxContainer/ScoreBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("GradientTexture2D_clq8j")

[node name="BadBar" type="ColorRect" parent="VBoxContainer/ScoreBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 2
color = Color(0.71, 0, 0, 1)

[node name="WinLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "PLATFORMING
PROFESSIONAL"
label_settings = SubResource("LabelSettings_hj3n0")
horizontal_alignment = 1

[node name="LoseLabelFall" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "mariodeathnois
e.wav"
label_settings = SubResource("LabelSettings_kvhn4")
horizontal_alignment = 1

[node name="LoseLabelScore" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "GO BACK TO
WHEEL SCHOOL"
label_settings = SubResource("LabelSettings_kvhn4")
horizontal_alignment = 1

[node name="ControlsLabelPositioner" type="Control" parent="."]
layout_mode = 2

[node name="ControlsLabel" type="RichTextLabel" parent="ControlsLabelPositioner"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
offset_left = 229.0
offset_top = -157.0
offset_right = 529.0
offset_bottom = -88.0
rotation = -0.359538
text = "Move with L/R arrow keys
  Jump with Up arrow key
Select with Space/Enter"
fit_content = true

[connection signal="new_segment_chosen" from="VBoxContainer/ComponentWheel" to="." method="_handle_choice"]
[connection signal="new_segment_selected" from="VBoxContainer/ComponentWheel" to="." method="_update_on_selection"]
[connection signal="puzzle_finished" from="VBoxContainer/ComponentWheel" to="." method="_handle_finished_puzzle"]
[connection signal="body_entered" from="VBoxContainer/Stage/DeathPlane" to="." method="player_fell"]
